--- a/src/main/resources/fdpclient_at.cfg
+++ b/src/main/resources/fdpclient_at.cfg
@@ -10,6 +10,9 @@ public net.minecraft.client.Minecraft func_147121_ag()V # rightClickMouse
 public net.minecraft.network.handshake.client.C00Handshake field_149598_b # ip
 public net.minecraft.network.handshake.client.C00Handshake field_149599_c # port
 
+# C00PacketKeepAlive
+public net.minecraft.network.play.client.C00PacketKeepAlive field_149461_a # key
+
 # C01PacketChatMessage
 public net.minecraft.network.play.client.C01PacketChatMessage field_149440_a # message
 
@@ -28,6 +31,10 @@ public net.minecraft.network.play.client.C08PacketPlayerBlockPlacement field_149
 # C13PacketPlayerAbilities
 public net.minecraft.network.play.client.C13PacketPlayerAbilities field_149497_e # flySpeed
 public net.minecraft.network.play.client.C13PacketPlayerAbilities field_149495_f # walkSpeed
+
+# C0FPacketConfirmTransaction
+public net.minecraft.network.play.client.C0FPacketConfirmTransaction field_149534_b # uid
+public net.minecraft.network.play.client.C0FPacketConfirmTransaction field_149536_a # windowId
 
 # C17PacketCustomPayload
 public net.minecraft.network.play.client.C17PacketCustomPayload field_149561_c # data
