nice check, zqat.top

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,3 +5,8 @@ kotlin_version = 1.6.10
 detekt_version = 1.19.0
 forgegradle_version = ddb1eb0
 mixingradle_version = ae2a80e
+
+systemProp.http.proxyHost=127.0.0.1
+systemProp.http.proxyPort=10809
+systemProp.https.proxyHost=127.0.0.1
+systemProp.https.proxyPort=10809
