--- a/gradle.properties
+++ b/gradle.properties
@@ -6,9 +6,9 @@ detekt_version = 1.19.0
 forgegradle_version = ddb1eb0
 mixingradle_version = ae2a80e
 
-systemProp.http.proxyHost=127.0.0.1
-systemProp.http.proxyPort=10809
-systemProp.https.proxyHost=127.0.0.1
-systemProp.https.proxyPort=10809
+#systemProp.http.proxyHost=127.0.0.1
+#systemProp.http.proxyPort=10809
+#systemProp.https.proxyHost=127.0.0.1
+#systemProp.https.proxyPort=10809
 
 jcef_version = 95.7.14.5
