use my pathfinding library

--- a/build.gradle
+++ b/build.gradle
@@ -78,9 +78,7 @@ dependencies {
         exclude module: "junit"
     } // for read dynamic capes
 
-    include("com.github.UnlegitMC:starlite:9971b899f7") {
-        exclude module: "junit"
-    } // for pathfinding
+    include("com.github.UnlegitMC:Astar3d:bec2291cf2") // pathfinding
 
     include fileTree(include: ["*.jar"], dir: "libs")
 }
